--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
+amqp==2.5.0
+billiard==3.6.0.0
+celery==4.3.0
 Django==2.2.1
+django-celery-results==1.1.1
 django-crispy-forms==1.7.2
+kombu==4.6.0
 Pillow==6.0.0
 pkg-resources==0.0.0
 psycopg2==2.8.2
 pytz==2019.1
+redis==3.2.1
 sqlparse==0.3.0
+vine==1.3.0
