--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ amqp==2.5.0
 billiard==3.6.0.0
 celery==4.3.0
 Django==2.2.1
+django-appconf==1.0.3
+django-celery-email==2.0.2
 django-celery-results==1.1.1
 django-crispy-forms==1.7.2
 kombu==4.6.0
@@ -10,5 +12,6 @@ pkg-resources==0.0.0
 psycopg2==2.8.2
 pytz==2019.1
 redis==3.2.1
+six==1.12.0
 sqlparse==0.3.0
 vine==1.3.0
