--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ django-celery-email==2.0.2
 django-celery-results==1.1.1
 django-crispy-forms==1.7.2
 kombu==4.6.0
+mysql==0.0.2
+mysqlclient==1.4.2.post1
 Pillow==6.0.0
 pkg-resources==0.0.0
 psycopg2==2.8.2
